[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Menu Things/Level Select/Level Select.gd" type="Script" id=1]
[ext_resource path="res://assets/Dialogue Stuff/Fonts/DigitalDisco.tres" type="DynamicFont" id=2]

[node name="Level_Select" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -175.0
margin_right = 150.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 150, 175 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
menuKey = "level_select"

[node name="Back" type="Button" parent="."]
margin_right = 46.0
margin_bottom = 22.0
focus_neighbour_left = NodePath("../Level_3")
focus_neighbour_right = NodePath("../Level_2")
focus_neighbour_bottom = NodePath("../HBoxContainer/Level_1")
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 26.0
margin_right = 300.0
margin_bottom = 350.0
rect_pivot_offset = Vector2( -1256, -476 )
size_flags_vertical = 3

[node name="Level_1" type="Button" parent="HBoxContainer"]
margin_right = 97.0
margin_bottom = 324.0
focus_neighbour_left = NodePath("../Level_3")
focus_neighbour_top = NodePath("../../Back")
focus_neighbour_right = NodePath("../Level_2")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Level 1"

[node name="Level_2" type="Button" parent="HBoxContainer"]
margin_left = 101.0
margin_right = 198.0
margin_bottom = 324.0
focus_neighbour_left = NodePath("../Level_1")
focus_neighbour_top = NodePath("../../Back")
focus_neighbour_right = NodePath("../Level_3")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Level 2"

[node name="Level_3" type="Button" parent="HBoxContainer"]
margin_left = 202.0
margin_right = 300.0
margin_bottom = 324.0
focus_neighbour_left = NodePath("../Level_2")
focus_neighbour_top = NodePath("../../Back")
focus_neighbour_right = NodePath("../Level_1")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Level 3"

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="HBoxContainer/Level_1" to="." method="_on_Level_1_pressed"]
[connection signal="pressed" from="HBoxContainer/Level_2" to="." method="_on_Level_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Level_3" to="." method="_on_Level_3_pressed"]
